--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -67,6 +66,12 @@
             <h2 id="question-text" class="text-xl sm:text-2xl font-bold text-gray-800 mb-6 min-h-[100px]">Loading question...</h2>
             <div id="options-container" class="space-y-4">
                 <!-- Options will be dynamically inserted here -->
+            </div>
+            <!-- Next Button Container -->
+            <div id="next-button-container" class="mt-6 text-right hidden">
+                <button id="next-btn" class="bg-indigo-600 text-white font-bold py-2 px-6 rounded-lg hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 transition-colors duration-300 shadow-md">
+                    Next &rarr;
+                </button>
             </div>
         </div>
         
@@ -465,6 +470,8 @@
         const resultScreenEl = document.getElementById('result-screen');
         const finalScoreEl = document.getElementById('final-score');
         const restartBtn = document.getElementById('restart-btn');
+        const nextBtn = document.getElementById('next-btn');
+        const nextButtonContainer = document.getElementById('next-button-container');
 
         // --- Quiz State ---
         let currentQuestionIndex = 0;
@@ -504,6 +511,9 @@
          * Displays the current question and its options.
          */
         function displayQuestion() {
+            // Hide the next button when a new question is shown
+            nextButtonContainer.classList.add('hidden');
+            
             // Reset for the next question
             optionsContainerEl.innerHTML = '';
             questionArea.classList.remove('question-fade-in');
@@ -563,11 +573,8 @@
 
             updateScore();
 
-            // Wait for a moment, then show the next question
-            setTimeout(() => {
-                currentQuestionIndex++;
-                displayQuestion();
-            }, 1500); // 1.5-second delay
+            // Reveal the 'Next' button
+            nextButtonContainer.classList.remove('hidden');
         }
 
         /**
@@ -592,6 +599,10 @@
         // --- Event Listeners ---
         document.addEventListener('DOMContentLoaded', startQuiz);
         restartBtn.addEventListener('click', startQuiz);
+        nextBtn.addEventListener('click', () => {
+            currentQuestionIndex++;
+            displayQuestion();
+        });
     </script>
 
 </body>
